--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 kotlin.code.style=official
 android.nonTransitiveRClass=true
+TWELVE_DATA_API_KEY=946f7795847941bdb544cfbe1453f0a5
+ALPHA_VANTAGE_API_KEY=ED6RFZR37ZOVYCYW
