Remove wrapper jar from repo and document bootstrap workaround

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,9 @@
 /build/
 **/build/
 *.iml
+
+# Generated local datasets
+/artifacts/
+/app/src/main/assets/bootstrap/nyse_daily_prices_room.csv
+
 gradle/wrapper/gradle-wrapper.jar
